--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.0-2' %}
+{% set version = '3.1-2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,32 +12,46 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/grpreg_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/grpreg/grpreg_{{ version }}.tar.gz
-  sha256: 12111d8ecb45974070a22ac6998155cc67935b49d88b358f5eaaa0f2833dd8f0
+  sha256: 38d5f277b8fbbdc3a760277c2372ae993f7bda4f0198338609ccc91110575c10
+
+
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
+  # If this is a new build for the same version, increment the build number.
   number: 0
-  skip: true  # [win32]
+
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
+# Suggests: grpregOverlap, knitr, survival
 requirements:
   build:
     - r-base
+    - {{ compiler('c') }}        # [not win]
+    - {{native}}toolchain        # [win]
     - r-matrix
-    - posix                # [win]
-    - {{native}}toolchain  # [win]
-    - gcc                  # [not win]
 
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-matrix
-    - libgcc  # [not win]
 
 test:
   commands:
-    - $R -e "library('grpreg')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('grpreg')"           # [not win]
     - "\"%R%\" -e \"library('grpreg')\""  # [win]
+
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
 
 about:
   home: https://CRAN.R-project.org/package=grpreg
@@ -52,3 +66,27 @@ extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: grpreg
+# Title: Regularization Paths for Regression Models with Grouped Covariates
+# Version: 3.1-2
+# Date: 2017-07-05
+# Author: Patrick Breheny [aut, cre], Yaohui Zeng [ctb]
+# Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
+# Depends: R (>= 3.1.0), Matrix
+# Suggests: grpregOverlap, knitr, survival
+# VignetteBuilder: knitr
+# Description: Efficient algorithms for fitting the regularization path of linear or logistic regression models with grouped penalties.  This includes group selection methods such as group lasso, group MCP, and group SCAD as well as bi-level selection methods such as the group exponential lasso, the composite MCP, and the group bridge.
+# BugReports: http://github.com/pbreheny/grpreg/issues
+# License: GPL-3
+# NeedsCompilation: yes
+# Packaged: 2017-07-05 21:31:51 UTC; pbreheny
+# Repository: CRAN
+# Date/Publication: 2017-07-06 10:19:31 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
