--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.1-3' %}
+{% set version = '3.1-4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,11 +8,10 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: grpreg_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/grpreg_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/grpreg/grpreg_{{ version }}.tar.gz
-  sha256: 47cb1b45761dd5c82fd0ee49a21c16046db4da6c1e8e91fc52436dea25ecaf44
+  sha256: 2946124fcb5e6d1ca3ed021757801be2d9e8ab79755726a64d6f3c5de340b953
 
 build:
   merge_build_host: True  # [win]
@@ -31,6 +30,9 @@ requirements:
     - {{native}}toolchain        # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
 
   host:
     - r-base
@@ -72,8 +74,8 @@ extra:
 
 # Package: grpreg
 # Title: Regularization Paths for Regression Models with Grouped Covariates
-# Version: 3.1-3
-# Date: 2018-04-07
+# Version: 3.1-4
+# Date: 2018-06-15
 # Author: Patrick Breheny [aut, cre], Yaohui Zeng [ctb]
 # Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
 # Depends: R (>= 3.1.0), Matrix
@@ -83,9 +85,9 @@ extra:
 # BugReports: http://github.com/pbreheny/grpreg/issues
 # License: GPL-3
 # NeedsCompilation: yes
-# Packaged: 2018-04-07 12:38:47 UTC; pbreheny
+# Packaged: 2018-06-15 20:33:25 UTC; pbreheny
 # Repository: CRAN
-# Date/Publication: 2018-04-08 11:13:01 UTC
+# Date/Publication: 2018-06-15 20:56:34 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
