--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.1-4' %}
+{% set version = '3.2-1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,7 +11,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/grpreg_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/grpreg/grpreg_{{ version }}.tar.gz
-  sha256: 2946124fcb5e6d1ca3ed021757801be2d9e8ab79755726a64d6f3c5de340b953
+  sha256: 6be37719a74d59582107273385d70963b4ccc6c394948c7617e65246d713cb88
 
 build:
   merge_build_host: True  # [win]
@@ -56,13 +56,14 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://CRAN.R-project.org/package=grpreg
+  home: http://pbreheny.github.io/grpreg, https://github.com/pbreheny/grpreg
   license: GPL-3
-  summary: Efficient algorithms for fitting the regularization path of linear or logistic regression
-    models with grouped penalties.  This includes group selection methods such as group
-    lasso, group MCP, and group SCAD as well as bi-level selection methods such as the
-    group exponential lasso, the composite MCP, and the group bridge.
+  summary: Efficient algorithms for fitting the regularization path of linear regression, GLM,
+    and Cox regression models with grouped penalties.  This includes group selection
+    methods such as group lasso, group MCP, and group SCAD as well as bi-level selection
+    methods such as the group exponential lasso, the composite MCP, and the group bridge.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
@@ -74,20 +75,25 @@ extra:
 
 # Package: grpreg
 # Title: Regularization Paths for Regression Models with Grouped Covariates
-# Version: 3.1-4
-# Date: 2018-06-15
-# Author: Patrick Breheny [aut, cre], Yaohui Zeng [ctb]
-# Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
-# Depends: R (>= 3.1.0), Matrix
+# Version: 3.2-1
+# Date: 2019-02-26
+# Authors@R: c( person("Patrick", "Breheny", role=c("aut","cre"), email="patrick-breheny@uiowa.edu", comment=c(ORCID="000-0002-0650-1119")), person("Yaohui", "Zeng", role="ctb"))
+# Depends: R (>= 3.1.0)
+# Imports: Matrix
 # Suggests: grpregOverlap, knitr, survival
 # VignetteBuilder: knitr
-# Description: Efficient algorithms for fitting the regularization path of linear or logistic regression models with grouped penalties.  This includes group selection methods such as group lasso, group MCP, and group SCAD as well as bi-level selection methods such as the group exponential lasso, the composite MCP, and the group bridge.
+# Description: Efficient algorithms for fitting the regularization path of linear regression, GLM, and Cox regression models with grouped penalties.  This includes group selection methods such as group lasso, group MCP, and group SCAD as well as bi-level selection methods such as the group exponential lasso, the composite MCP, and the group bridge.
 # BugReports: http://github.com/pbreheny/grpreg/issues
 # License: GPL-3
+# URL: http://pbreheny.github.io/grpreg, https://github.com/pbreheny/grpreg
+# LazyData: TRUE
+# RoxygenNote: 6.1.1
 # NeedsCompilation: yes
-# Packaged: 2018-06-15 20:33:25 UTC; pbreheny
+# Packaged: 2019-02-26 21:05:37 UTC; pbreheny
+# Author: Patrick Breheny [aut, cre] (<https://orcid.org/000-0002-0650-1119>), Yaohui Zeng [ctb]
+# Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
 # Repository: CRAN
-# Date/Publication: 2018-06-15 20:56:34 UTC
+# Date/Publication: 2019-02-26 21:40:03 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
